// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`renderForWhatsApp text uses type:text and rewrites markdown to WhatsApp mrkdwn 1`] = `
{
  "channel": "whatsapp",
  "payload": {
    "messaging_product": "whatsapp",
    "recipient_type": "individual",
    "text": {
      "body": "Booked _AA 100_ to LHR",
      "preview_url": false,
    },
    "to": "",
    "type": "text",
  },
}
`;

exports[`renderForWhatsApp card with <=3 ctas renders interactive button payload 1`] = `
{
  "channel": "whatsapp",
  "payload": {
    "interactive": {
      "action": {
        "buttons": [
          {
            "reply": {
              "id": "approve:booking-1",
              "title": "Confirm",
            },
            "type": "reply",
          },
          {
            "reply": {
              "id": "reject:booking-1",
              "title": "Cancel",
            },
            "type": "reply",
          },
        ],
      },
      "body": {
        "text": 
"*Itinerary held*

JFK to LHR on Apr 30. Hold expires in 15 minutes.

- Departs 21:30 EDT
- Economy Plus
- Refundable"
,
      },
      "header": undefined,
      "type": "button",
    },
    "messaging_product": "whatsapp",
    "recipient_type": "individual",
    "to": "",
    "type": "interactive",
  },
}
`;

exports[`renderForWhatsApp card with >3 ctas falls back to list payload 1`] = `
{
  "channel": "whatsapp",
  "degraded": false,
  "payload": {
    "interactive": {
      "action": {
        "button": "View options",
        "sections": [
          {
            "rows": [
              {
                "description": "off-1",
                "id": "select_offer:off-1",
                "title": "Offer 1",
              },
              {
                "description": "off-2",
                "id": "select_offer:off-2",
                "title": "Offer 2",
              },
              {
                "description": "off-3",
                "id": "select_offer:off-3",
                "title": "Offer 3",
              },
              {
                "description": "off-4",
                "id": "select_offer:off-4",
                "title": "Offer 4",
              },
              {
                "description": "off-5",
                "id": "select_offer:off-5",
                "title": "Offer 5",
              },
            ],
            "title": "Itinerary held",
          },
        ],
      },
      "body": {
        "text": 
"*Itinerary held*

JFK to LHR on Apr 30. Hold expires in 15 minutes.

- Departs 21:30 EDT
- Economy Plus
- Refundable"
,
      },
      "type": "list",
    },
    "messaging_product": "whatsapp",
    "recipient_type": "individual",
    "to": "",
    "type": "interactive",
  },
}
`;

exports[`renderForWhatsApp tool_result with share 1`] = `
{
  "channel": "whatsapp",
  "payload": {
    "interactive": {
      "action": {
        "buttons": [
          {
            "reply": {
              "id": "select_offer:off-1",
              "title": "Hold this fare",
            },
            "type": "reply",
          },
        ],
      },
      "body": {
        "text": 
"*Best fare found*

AA 100, JFK to LHR, $482.10 all-in.

- 1 stop
- 8h 5m
- Refundable"
,
      },
      "header": undefined,
      "type": "button",
    },
    "messaging_product": "whatsapp",
    "recipient_type": "individual",
    "to": "",
    "type": "interactive",
  },
}
`;

exports[`renderForWhatsApp sources renders text with numbered links 1`] = `
{
  "channel": "whatsapp",
  "payload": {
    "messaging_product": "whatsapp",
    "recipient_type": "individual",
    "text": {
      "body": 
"Sources:
1. AA flight status - https://aa.com/flights/100
2. Heathrow arrivals - https://heathrow.com/arrivals"
,
      "preview_url": true,
    },
    "to": "",
    "type": "text",
  },
}
`;

exports[`renderForWhatsApp esim_activation uses cta_url interactive with QR header + install URL 1`] = `
{
  "channel": "whatsapp",
  "payload": {
    "interactive": {
      "action": {
        "name": "cta_url",
        "parameters": {
          "display_text": "📱 Install eSIM",
          "url": "https://app.sendero.travel/install/esim/abc.def",
        },
      },
      "body": {
        "text": 
"*Trip eSIM ready*
*5 GB · 30 days · Japan + Korea*
5.0 GB · 30 days · JP, KR
$3.00 · charged to your wallet
iPhone (iOS 17.4 or newer) — tap below for one-tap install.
Android — tap below, scan the QR shown on the page."
,
      },
      "footer": {
        "text": "Scan QR or tap to install",
      },
      "header": {
        "image": {
          "link": "https://app.sendero.travel/api/esim/qr/abc.def.png",
        },
        "type": "image",
      },
      "type": "cta_url",
    },
    "messaging_product": "whatsapp",
    "recipient_type": "individual",
    "to": "",
    "type": "interactive",
  },
}
`;

exports[`renderForWhatsApp seat_picker uses an interactive list with select_seat row ids 1`] = `
{
  "channel": "whatsapp",
  "payload": {
    "interactive": {
      "action": {
        "button": "Pick seat",
        "sections": [
          {
            "rows": [
              {
                "description": "24.00 USD · economy",
                "id": "select_seat:trp_test_001:off_test_abc:pas_test_001:sea_001:12A",
                "title": "12A",
              },
              {
                "description": "18.00 USD · economy",
                "id": "select_seat:trp_test_001:off_test_abc:pas_test_001:sea_002:14C",
                "title": "14C",
              },
            ],
            "title": "Seats",
          },
        ],
      },
      "body": {
        "text": 
"*Seat for Casey Traveler*
Pick one — fare adjusts at booking."
,
      },
      "type": "list",
    },
    "messaging_product": "whatsapp",
    "recipient_type": "individual",
    "to": "",
    "type": "interactive",
  },
}
`;

exports[`renderForWhatsApp ancillary_picker collapses bags + cfar into one interactive list 1`] = `
{
  "channel": "whatsapp",
  "payload": {
    "interactive": {
      "action": {
        "button": "View options",
        "sections": [
          {
            "rows": [
              {
                "description": "0.00 USD · 7kg · 55×40×20",
                "id": "add_bag:trp_test_001:off_test_abc:pas_test_001:bag_001:Carry-on bag",
                "title": "Carry-on bag",
              },
              {
                "description": "45.00 USD · 23kg",
                "id": "add_bag:trp_test_001:off_test_abc:pas_test_001:bag_002:Checked bag",
                "title": "Checked bag",
              },
              {
                "description": "32.00 USD · Refund up to 75% for any reason.",
                "id": "cfar:off_test_abc:cfar_001",
                "title": "Cancel anytime",
              },
            ],
            "title": "Extras",
          },
        ],
      },
      "body": {
        "text": 
"*Bags + extras for Casey Traveler*
Tap to add — fare adjusts at booking."
,
      },
      "type": "list",
    },
    "messaging_product": "whatsapp",
    "recipient_type": "individual",
    "to": "",
    "type": "interactive",
  },
}
`;

exports[`renderForWhatsApp trip_brief uses cta_url when shareUrl present (single-tap to public page) 1`] = `
{
  "channel": "whatsapp",
  "payload": {
    "interactive": {
      "action": {
        "name": "cta_url",
        "parameters": {
          "display_text": "🔗 Open trip",
          "url": "https://app.sendero.travel/trip/abc.def",
        },
      },
      "body": {
        "text": 
"*NYC week*
_2026-06-01 → 2026-06-08_
Status: in_progress

🟡 Outbound flight rebooked — confirm with traveler.

*✈️ Flights*
• EZE → JFK (XYZ123) · $850.00

*🏨 Stays*
• The Mercer Hotel · New York · 6n · $1200.00

*📱 Connectivity*
• 5.0 GB · 30d · US · active"
,
      },
      "footer": {
        "text": "Tap to share or save the full trip view",
      },
      "type": "cta_url",
    },
    "messaging_product": "whatsapp",
    "recipient_type": "individual",
    "to": "",
    "type": "interactive",
  },
}
`;

exports[`renderForWhatsApp stay_rate_picker emits an interactive list with a row per rate keyed by rateId 1`] = `
{
  "channel": "whatsapp",
  "degraded": false,
  "payload": {
    "interactive": {
      "action": {
        "button": "Pick a rate",
        "sections": [
          {
            "rows": [
              {
                "description": "Successful Booking · pay_now · methods: balance,card",
                "id": "select_stay_rate:rat_0000B5zdBpSS9xnoU7J48B",
                "title": "$1,355.38 ✓",
              },
            ],
            "title": "Rates",
          },
        ],
      },
      "body": {
        "text": 
"*Duffel Test Hotel*
Henderson Island, GB
1 room · 1 guest · 2026-06-04 → 2026-06-07

_Sold by Sendero Travel_
548 Market St #38322, San Francisco, CA 94104, USA
hello@sendero.travel · +1 (415) 813-1131
Booking conditions & T&C: https://sendero.travel/legal/terms
Booking.com terms: https://www.booking.com/content/terms.html"
,
      },
      "header": {
        "text": "Hotel rates",
        "type": "text",
      },
      "type": "list",
    },
    "messaging_product": "whatsapp",
    "recipient_type": "individual",
    "to": "",
    "type": "interactive",
  },
}
`;

exports[`renderForWhatsApp stay_quote_review interactive button surfaces every Duffel-mandated field 1`] = `
{
  "channel": "whatsapp",
  "payload": {
    "interactive": {
      "action": {
        "buttons": [
          {
            "reply": {
              "id": "confirm_stay_booking:quo_0000B5zdBvh42oRqcoI4BO",
              "title": "Confirm booking",
            },
            "type": "reply",
          },
          {
            "reply": {
              "id": "cancel_stay_booking:quo_0000B5zdBvh42oRqcoI4BO",
              "title": "Cancel",
            },
            "type": "reply",
          },
        ],
      },
      "body": {
        "text": 
"*Duffel Test Hotel*
Henderson Island, GB
1 room · 1 guest · 3 nights
Check in 2026-06-04 from 14:30
Check out 2026-06-07 until 11:30

*Billing*
Room    $1,219.70
Taxes   $95.73
Fees    $39.95
Total   $1,355.38
Due at property $39.95

*Cancellation policy*
✓ Full refund until 2026-06-01 — $1,355.38
⚠ Partial refund until 2026-06-03 — $600.00
✗ No refund after 2026-06-03

*Hotel policy & rate conditions*
*Smoking*
No smoking allowed in any room. Smoking on the property carries a $250 cleaning fee.

*Pets*
Pets are not allowed.

*Key collection*
Collect from reception.

_Sold by Sendero Travel_
548 Market St #38322, San Francisco, CA 94104, USA
hello@sendero.travel · +1 (415) 813-1131
Booking conditions & T&C: https://sendero.travel/legal/terms
Booking.com terms: https://www.booking.com/content/terms.html"
,
      },
      "type": "button",
    },
    "messaging_product": "whatsapp",
    "recipient_type": "individual",
    "to": "",
    "type": "interactive",
  },
}
`;
